add details for linux JavaFX